--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,6 @@ input[type=text] {
   line-height: 16px;
   text-transform: uppercase;
   color: #9A9A9A;
-  font-family: FTN65;
 }
 .nav ul li:hover {
   background: #EBEEFA;
@@ -356,15 +355,18 @@ input[type=text] {
 .tags {
   position: relative;
   float: left;
-  font-size: 10px;
-  line-height: 12px;
-  color: #383A41;
-  font-family: FTN65;
   padding: 6px 26px 6px 9px;
   border: 1px solid #C4C4C4;
   box-sizing: border-box;
   border-radius: 4px;
   margin-right: 8px;
+  font-style: normal;
+  font-weight: 500;
+  font-family: FuturaPT-Demi;
+  font-size: 10px;
+  line-height: 12px;
+  text-align: center;
+  color: #383A41;
 }
 
 .closes {
@@ -603,7 +605,6 @@ input[type=text] {
 .middle_part table tr {
   color: #000;
   border-bottom: 1px solid #9A9A9A;
-  font-family: FTN65;
 }
 .middle_part table tr.start_info td:nth-child(1) {
   border-right: 1px solid #BABABA;
@@ -702,7 +703,6 @@ table.bordered tr td {
   float: left;
   font-size: 20px;
   margin-right: 5px;
-  font-family: FTN65;
 }
 
 .lt2 {
@@ -710,7 +710,6 @@ table.bordered tr td {
   float: left;
   font-size: 10px;
   margin-right: 8px;
-  font-family: FTN65;
 }
 
 .lt3 {
@@ -749,7 +748,6 @@ table.bordered tr td {
   text-transform: uppercase;
   color: #383A41;
   margin-bottom: 10px;
-  font-family: FTN65;
 }
 .sortblock_param {
   width: 100%;
@@ -1069,7 +1067,6 @@ table.bordered tr td {
   margin-top: 10px;
   margin-right: 16px;
   padding: 8px 50px;
-  font-family: FTN65;
   border: 1px solid #32AAA7;
 }
 
@@ -1156,7 +1153,6 @@ table.bordered tr td {
   letter-spacing: 0.1em;
   text-transform: uppercase;
   color: #9A9A9A;
-  font-family: FTN65;
   margin-right: 80px;
   cursor: pointer;
 }
