--- a/scss/320.scss
+++ b/scss/320.scss
@@ -625,6 +625,14 @@
     width: 100% !important;
     margin-left: 0;
     margin-bottom: 20px;
+
+    &:last-child {
+      text-align: left !important;
+
+      label {
+        margin-left: 20px !important;
+      }
+    }
   }
 
   .closebig {
