--- a/scss/style.scss
+++ b/scss/style.scss
@@ -393,6 +393,10 @@ input[type="text"] {
   line-height: 12px;
   text-align: center;
   color: #383A41;
+
+  &_title {
+    text-transform: uppercase;
+  }
 }
 
 .closes {
@@ -471,10 +475,24 @@ input[type="text"] {
 
 .more,
 .open,
-.hidden {
+.hidden,
+.hidden_action {
   line-height: 16px;
   color: #32AAA7;
   border-bottom: 1px dotted;
+}
+
+.middle_part table a {
+  font-family: FuturaPT-Book;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  color: #32AAA7;
+}
+
+.hidden_action {
+  margin-right: 25px;
 }
 
 .hidden_component {
@@ -517,13 +535,13 @@ input[type="text"] {
       display: none;
     }
 
-    &:hover .modal_line {
-      display: block;
-    }
-
-    &:hover .title_line {
-      display: none;
-    }
+    //&:hover .modal_line {
+    //  display: block;
+    //}
+    //
+    //&:hover .title_line {
+    //  display: none;
+    //}
   }
 
   .title_line {
@@ -931,8 +949,8 @@ table.bordered tr td {
   }
 
   &:focus{
-   border-bottom: 1px solid #32AAA7;
- }
+    border-bottom: 1px solid #32AAA7;
+  }
 
   &:focus ~ label{
     font-size: 9px;
@@ -1199,12 +1217,14 @@ table.bordered tr td {
 
 .modal_partner,
 .modal_send,
-.modal_view {
+.modal_view,
+.modal_sale {
   display: none;
-  position: absolute;
+  position: fixed;
   width: 100%;
   background: #fff;
   left: 0;
+  bottom: 0;
   padding: 40px;
   box-sizing: border-box;
   box-shadow: 0 4px 12px 2px rgba(0, 0, 0, 0.24);
@@ -1332,6 +1352,17 @@ table.bordered tr td {
   .line_param_checkbox + label::before {
     top: 0;
   }
+}
+
+.line_param_checkbox + label.line_param_label_table::before {
+  top: -7px;
+}
+
+.line_param_checkbox:checked + label.line_param_label_table_top::before {
+  border-color: #FFFFFF;
+  background-color: #FFFFFF;
+  background-image: url("../images/done_green.svg");
+  background-size: auto;
 }
 
 .acc_nav {
@@ -1518,6 +1549,49 @@ table.bordered tr td {
 
 .cart_rp_title {
   margin-bottom: 36px;
+}
+
+.tabs_block {
+  border-bottom: 1px solid #C4C4C4;;
+
+  &_text {
+    display: inline-block;
+    margin-right: 5%;
+    padding-bottom: 12px;
+    font-family: FuturaPT-Book;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 12px;
+    text-transform: uppercase;
+    color: #9A9A9A;
+  }
+
+  &_text.active {
+    border-bottom: 2px solid #32AAA7;
+    font-weight: bold;
+  }
+}
+
+.table_input {
+  background: #F3F6FF;
+  border: 1px solid #BABABA;
+  box-sizing: border-box;
+  border-radius: 1px;
+}
+
+.input_edit_title {
+  font-family: FuturaPT-Book;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 12px;
+  color: #9A9A9A;
+}
+
+.table_link_block {
+  float: right;
+  margin-top: 15px;
 }
 
 
