--- a/css/320.css
+++ b/css/320.css
@@ -44,205 +44,45 @@
     width: 100%;
   }
 
-  .mobilis {
-    display: block;
-    width: 100% !important;
-    float: left !important;
-    text-align: left;
-    margin-bottom: 25px;
-  }
-
-  .mobilis span {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 24px;
-    color: #383A41;
-  }
-
-  .nav ul li .sub_menu li {
-    float: left;
-    padding: 0;
-    margin-bottom: 12px;
-    width: 100%;
-    text-align: left;
-  }
-
-  .nav_parent.active .ico_t {
-    display: block;
-    color: #383A41;
-    text-transform: none;
-    font-size: 12px;
-    margin: 0;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: -14px;
-  }
-
-  .nav_parent.active img {
-    opacity: 1;
-  }
-
-  .nav_parent.active + .sub_menu {
-    float: left;
-    display: block;
-    position: fixed;
-    top: auto;
-    width: 100%;
-    background: #fff;
-    height: 100%;
-    z-index: 10;
-    left: 0;
-    box-sizing: border-box;
-    bottom: 60px;
-  }
-
-  .nav_parent.active .ico {
-    display: block;
-    float: left;
-    margin-top: -5px;
-    margin-bottom: 5px;
-  }
-
-  .nav ul li .sub_menu li a {
-    padding: 16px 12px;
-    background: #EBEEFA !important;
-    display: block;
-    float: left;
-    width: 100%;
-    box-sizing: border-box;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    color: #32AAA7;
-  }
-
   .left_menu_top {
-    display: none;
-  }
-
-  .left_menu {
-    display: none;
-    left: 0;
-    top: auto;
-    width: 100%;
-    height: 60px;
-    background: #FCFCFC;
-    box-shadow: none;
-    padding: 0;
-    box-sizing: border-box;
-    border-top: 1px solid #DEE2F3;
-    bottom: 0;
-  }
-
-  .nav ul li {
-    margin-bottom: 5px;
-    width: auto;
-    padding-left: 24px;
-    padding-right: 24px;
-    box-sizing: border-box;
-    float: left;
-    padding-top: 15px;
-    padding-bottom: 0;
-    position: relative;
-  }
-
-  .nav ul li .sub_menu li a {
-    padding: 16px 12px;
-    background: #EBEEFA !important;
     display: block;
-    float: left;
-    width: 100%;
-    box-sizing: border-box;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    color: #32AAA7 !important;
-  }
-
-  .left_menu:hover {
-    width: 100%;
-  }
-
-  .left_menu:hover .ico_t {
-    display: none;
-  }
-
-  .left_menu:hover .nav ul li a {
-    background: none;
-  }
-
-  .left_menu:hover .nav ul li:hover a {
-    background: none;
-    color: #383A41;
-  }
-
-  .nav ul li:hover {
-    background: none !important;
-  }
-
-  .nav_parent.active .ico_t {
-    display: block !important;
-    color: #383A41;
-    text-transform: none;
-    font-size: 12px;
-    margin: 0;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: -14px;
-    text-align: center;
-  }
-
-  .nav ul li {
-    margin-bottom: 5px;
-    width: auto;
-    padding-left: 0;
-    padding-right: 0;
-    box-sizing: border-box;
-    float: left;
-    padding-top: 0;
-    padding-bottom: 0;
-    position: relative;
-  }
-
-  .nav ul li a.nav_parent {
-    box-sizing: border-box;
-    padding-top: 15px;
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-bottom: 15px;
-  }
-
-  .nav_parent.active .ico_t {
-    display: block !important;
-    color: #383A41;
-    text-transform: none;
-    margin: 0;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    text-align: center;
   }
 
   .left_menu {
-    z-index: 99999;
+    display: none;
+    width: 60%;
+  }
+  .left_menu .nav {
+    text-align: left;
+  }
+  .left_menu .nav ul li a:not(.adaptive) {
+    background: url(../images/array_down.png) no-repeat 100% center;
+  }
+  .left_menu .nav ul li a.adaptive {
+    background: url(../images/array_top.png) no-repeat 100% center;
+    color: #383A41;
+  }
+  .left_menu .ico {
+    width: auto;
+  }
+  .left_menu .ico_t {
+    display: block;
   }
 
-  .nav ul li:hover .sub_menu {
+  .left_menu .nav ul li a.adaptive {
+    display: block;
+  }
+
+  .lhid {
+    display: block;
+  }
+
+  .small_logo {
     display: none;
   }
 
-  .nav_parent.active + .sub_menu {
-    display: block !important;
-  }
-
-  .left_menu:hover .nav ul li.active a.nav_parent {
-    background: none !important;
+  .nav {
+    text-align: left;
   }
 
   .footer {
@@ -673,7 +513,7 @@
     top: 0;
     left: 0;
     background: rgba(56, 58, 65, 0.8);
-    z-index: 1;
+    z-index: 11;
   }
 
   .month_select {
