--- a/css/style.css
+++ b/css/style.css
@@ -142,10 +142,10 @@ input[type=text] {
 .left_menu:hover .nav {
   text-align: left;
 }
-.left_menu:hover .nav ul li a {
+.left_menu:hover .nav ul li a:not(.active) {
   background: url(../images/array_down.png) no-repeat 100% center;
 }
-.left_menu:hover .nav ul li:hover a {
+.left_menu:hover .nav ul li a.active {
   background: url(../images/array_top.png) no-repeat 100% center;
   color: #383A41;
 }
@@ -1499,4 +1499,22 @@ table.bordered tr td {
 .table_link_block {
   float: right;
   margin-top: 15px;
+}
+
+::-webkit-scrollbar {
+  width: 1px;
+  height: 1px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  opacity: 0.64;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  background: #383A41;
+  opacity: 0.64;
+  border-radius: 10px;
 }
