--- a/scss/style.scss
+++ b/scss/style.scss
@@ -131,11 +131,11 @@ input[type="text"] {
     .nav {
       text-align: left;
 
-      ul li a {
+      ul li a:not(.active) {
         background: url(../images/array_down.png) no-repeat 100% center;
       }
 
-      ul li:hover a {
+      ul li a.active {
         background: url(../images/array_top.png) no-repeat 100% center;
         color: #383A41;
       }
@@ -146,7 +146,7 @@ input[type="text"] {
     }
 
     .ico_t {
-      display:block
+      display: block
     }
 
     .lhid {
@@ -217,7 +217,7 @@ input[type="text"] {
 }
 
 .left_menu:hover .nav ul li a.active + .sub_menu {
-  display:block
+  display: block
 }
 
 .l_p_adaptive {
@@ -1594,4 +1594,20 @@ table.bordered tr td {
   margin-top: 15px;
 }
 
+::-webkit-scrollbar {
+  width: 1px;
+  height: 1px;
+}
 
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  opacity: 0.64;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+  background: #383A41;
+  opacity: 0.64;
+  border-radius: 10px;
+}
