--- a/css/style.css
+++ b/css/style.css
@@ -861,6 +861,7 @@ table.bordered tr td {
   width: 100%;
   border: 0;
   border-bottom: 1px solid #C4C4C4;
+  font-family: FuturaPT-Book;
   height: 30px;
   font-size: 14px;
   line-height: 16px;
