--- a/scss/320.scss
+++ b/scss/320.scss
@@ -324,7 +324,7 @@
 
   .title_line_t.search {
     background: #fff url(../images/s_i.svg) no-repeat 95% center;
-    float: left;
+    //float: left;
     width: 100%;
     padding-left: 20px;
     box-sizing: border-box;
