--- a/css/320.css
+++ b/css/320.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 320px) and (max-width: 800px) {
   .tlabel {
     position: absolute;
-    top: 18px;
+    top: 25px !important;
     left: 0;
     transition: 0.15s ease-in-out;
     color: #a0a0a6;
@@ -12,15 +12,17 @@
 
   .tinput:focus ~ label {
     font-size: 14px;
+    top: 25px !important;
   }
 
   .tinput:valid ~ label {
     font-size: 14px;
+    top: 25px !important;
   }
 
   .tinput:focus ~ label {
     font-size: 9px;
-    top: 0;
+    top: 5px !important;
   }
 
   .label_in .array_down,
