--- a/scss/320.scss
+++ b/scss/320.scss
@@ -2,7 +2,7 @@
 
   .tlabel {
     position: absolute;
-    top: 18px;
+    top: 25px !important;
     left: 0;
     transition: .15s ease-in-out;
     color: #a0a0a6;
@@ -13,15 +13,17 @@
 
   .tinput:focus ~ label {
     font-size: 14px;
+    top: 25px !important;
   }
 
   .tinput:valid ~ label {
     font-size: 14px;
+    top: 25px !important;
   }
 
   .tinput:focus ~ label{
     font-size: 9px;
-    top: 0;
+    top: 5px !important;
   }
 
   .label_in .array_down,
