--- a/scss/style.scss
+++ b/scss/style.scss
@@ -927,11 +927,13 @@ table.bordered tr td {
 
 .tlabel{
   position: absolute;
-  //top: 42px;
+  top: 36px;
+  /* left: 37px; */
   transition: .15s ease-in-out;
   color: #a0a0a6;
   pointer-events: none;
   left: 0;
+  text-transform: uppercase;
   font-family: FuturaPT-Book;
 }
 
@@ -955,7 +957,7 @@ table.bordered tr td {
 
   &:focus ~ label{
     font-size: 9px;
-    top: 25px;
+    top: 15px;
   }
 }
 
