--- a/scss/320.scss
+++ b/scss/320.scss
@@ -185,114 +185,11 @@
     text-align: left;
   }
 
+   .left_menu:hover {
+     width: 60%;
+   }
 
-  // .nav ul li {
-  //   margin-bottom: 5px;
-  //   width: auto;
-  //   padding-left: 24px;
-  //   padding-right: 24px;
-  //   box-sizing: border-box;
-  //   float: left;
-  //   padding-top: 15px;
-  //   padding-bottom: 0;
-  //   position:relative
-  // }
 
-  // .nav ul li .sub_menu li a {
-  //   padding: 16px 12px;
-  //   background: #EBEEFA !important;
-  //   display: block;
-  //   float: left;
-  //   width: 100%;
-  //   box-sizing: border-box;
-  //   font-style: normal;
-  //   font-weight: 500;
-  //   font-size: 14px;
-  //   line-height: 16px;
-  //   color: #32AAA7 !important;
-  // }
-
-  // .left_menu:hover {
-  //   width:100%;
-  // }
-
-  // .left_menu:hover .ico_t {
-  //   display:none
-  // }
-
-  // .left_menu:hover .nav ul li a {
-  //   background: none
-  // }
-
-  // .left_menu:hover .nav ul li:hover a {
-  //   background: none;
-  //   color: #383A41;
-  // }
-
-  // .nav ul li:hover {
-  //   background: none !important;
-  // }
-
-  // .nav_parent.active .ico_t {
-  //   display: block !important;
-  //   color: #383A41;
-  //   text-transform: none;
-  //   font-size: 12px;
-  //   margin: 0;
-  //   width: 100%;
-  //   position: absolute;
-  //   left: 0;
-  //   bottom: -14px;
-  //   text-align: center;
-  // }
-
-  // .nav ul li {
-  //   margin-bottom: 5px;
-  //   width: auto;
-  //   padding-left: 0;
-  //   padding-right: 0;
-  //   box-sizing: border-box;
-  //   float: left;
-  //   padding-top: 0;
-  //   padding-bottom: 0;
-  //   position: relative;
-  // }
-
-  // .nav ul li a.nav_parent {
-  //   box-sizing: border-box;
-  //   padding-top: 15px;
-  //   padding-left: 24px;
-  //   padding-right: 24px;
-  //   padding-bottom: 15px;
-  // }
-
-  // .nav_parent.active .ico_t {
-  //   display: block !important;
-  //   color: #383A41;
-  //   text-transform: none;
-  //   margin: 0;
-  //   width: 100%;
-  //   position: absolute;
-  //   left: 0;
-  //   bottom: 0;
-  //   text-align: center;
-  // }
-
-  // .left_menu {
-  //   z-index: 99999;
-  // }
-
-  // .nav ul li:hover .sub_menu {
-  //   display:none
-  // }
-
-  // .nav_parent.active + .sub_menu {
-  //   display: block !important;
-  // }
-
-  // .left_menu:hover .nav ul li.active a.nav_parent {
-  //   background: none !important;
-  // }
 
   .footer {
     padding-left: 20px;
