--- a/css/320.css
+++ b/css/320.css
@@ -52,7 +52,7 @@
 
   .left_menu {
     display: none;
-    width: 60%;
+    width: 70%;
   }
   .left_menu .nav {
     text-align: left;
@@ -318,6 +318,7 @@
     position: fixed;
     left: 0;
     width: 100%;
+    padding: 20px;
     box-sizing: border-box;
     background: #FFFFFF;
     box-shadow: none;
