--- a/scss/320.scss
+++ b/scss/320.scss
@@ -1,5 +1,9 @@
 @media only screen and (min-width:320px) and (max-width:800px) {
 
+  .acc_nav {
+    left: 10px;
+  }
+
   .tlabel {
     position: absolute;
     top: 25px !important;
