--- a/css/320.css
+++ b/css/320.css
@@ -57,6 +57,7 @@
   .left_menu {
     display: none;
     width: 70%;
+    overflow: scroll;
   }
   .left_menu .nav {
     text-align: left;
@@ -598,5 +599,10 @@
 
   .footer_line a.footer_line_link {
     margin-right: 0;
+  }
+
+  .noscroll {
+    display: block;
+    overflow: hidden;
   }
 }
