--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,11 @@ input[type=text] {
   color: #9A9A9A;
 }
 
+.noscroll {
+  position: inherit;
+  overflow: auto;
+}
+
 .fullwidth {
   width: 100%;
   float: left;
