--- a/scss/style.scss
+++ b/scss/style.scss
@@ -135,7 +135,7 @@ input[type="text"] {
   box-shadow: 0 0 16px 2px rgba(56, 58, 65, 0.24);
   padding: 0;
   box-sizing: border-box;
-  z-index: 11;
+  z-index: 15;
 
   &:hover {
     width: 280px;
@@ -771,6 +771,11 @@ input[type="text"] {
       border-right: 1px solid #BABABA;
     }
   }
+
+  .head_t_top th {
+    background-color: #32AAA7;
+    color: #FFFFFF;
+  }
 }
 
 table.bordered tr th,
@@ -968,7 +973,7 @@ table.bordered tr td {
   color: #a0a0a6;
   pointer-events: none;
   left: 0;
-  text-transform: uppercase;
+  //text-transform: uppercase;
   font-family: FuturaPT-Book;
 }
 
@@ -1257,17 +1262,48 @@ table.bordered tr td {
   padding-bottom: 0;
 }
 
+.label_in_three_column {
+  display: inline-block;
+  position: relative;
+  width: 33%;
+  margin-right: 2px;
+  box-sizing: border-box;
+
+  &:last-child {
+    width: 33%;
+    margin-right: 0;
+  }
+
+  label {
+    top: 10px;
+    font-family: FuturaPT-Book;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: #9A9A9A;
+  }
+
+  .tinput {
+    &:focus ~ label {
+      font-size: 9px;
+      top: -10px;
+    }
+  }
+}
+
 //Модалки
 
 .modal_partner,
 .modal_send,
 .modal_view,
-.modal_sale {
+.modal_sale,
+.modal_sklad {
   display: none;
   position: fixed;
   width: 100%;
   background: #fff;
-  left: 0;
+  left: 80px;
   bottom: 0;
   padding: 40px;
   box-sizing: border-box;
@@ -1646,20 +1682,20 @@ table.bordered tr td {
 
 //Скролл
 
-::-webkit-scrollbar {
-  width: 1px;
-  height: 1px;
-}
-
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-  opacity: 0.64;
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-  background: #383A41;
-  opacity: 0.64;
-  border-radius: 10px;
-}
+//::-webkit-scrollbar {
+//  width: 1px;
+//  height: 1px;
+//}
+//
+//::-webkit-scrollbar-track {
+//  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+//  opacity: 0.64;
+//  border-radius: 10px;
+//}
+//
+//::-webkit-scrollbar-thumb {
+//  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+//  background: #383A41;
+//  opacity: 0.64;
+//  border-radius: 10px;
+//}
