--- a/scss/320.scss
+++ b/scss/320.scss
@@ -632,6 +632,10 @@
     margin-right: 0;
   }
 
+  .footer_line_adaptive {
+    text-align: left;
+  }
+
   .noscroll {
     display: block;
     overflow: hidden;
