--- a/css/320.css
+++ b/css/320.css
@@ -602,6 +602,10 @@
     margin-right: 0;
   }
 
+  .footer_line_adaptive {
+    text-align: left;
+  }
+
   .noscroll {
     display: block;
     overflow: hidden;
