--- a/scss/320.scss
+++ b/scss/320.scss
@@ -1,5 +1,12 @@
 @media only screen and (min-width:320px) and (max-width:800px) {
 
+  .modal_sklad {
+    display: block;
+    width: 100%;
+    left: 0;
+    top: 56px;
+  }
+
   .acc_nav {
     left: 10px;
   }
@@ -11,7 +18,6 @@
     transition: .15s ease-in-out;
     color: #a0a0a6;
     pointer-events: none;
-    text-transform: uppercase;
     font-size: 14px;
   }
 
@@ -20,10 +26,10 @@
     top: 25px !important;
   }
 
-  .tinput:valid ~ label {
-    font-size: 14px;
-    top: 25px !important;
-  }
+  //.tinput:valid ~ label {
+  //  font-size: 14px;
+  //  top: 25px !important;
+  //}
 
   .tinput:focus ~ label{
     font-size: 9px;
@@ -88,7 +94,7 @@
   }
 
   .left_menu .nav ul li a.adaptive {
-    display:block
+    display: block
   }
 
   .lhid {
@@ -525,16 +531,14 @@
 
   .modal_send {
     position: fixed;
+    width: 100%;
     padding: 20px;
     font-family: FuturaPT-Book;
     bottom: 0;
+    left: 0;
 
     h2 {
       font-size: 20px;
-    }
-
-    .closebig {
-      display: none;
     }
 
     .l_p,
@@ -545,6 +549,19 @@
     .l_p_adaptive {
       display: block;
     }
+  }
+
+  .modal_view {
+    position: fixed;
+    width: 100%;
+    padding: 20px;
+    font-family: FuturaPT-Book;
+    bottom: 0;
+    left: 0;
+  }
+
+  .modal_line_catalog {
+    top: 20px;
   }
 
   .overlay {
@@ -639,6 +656,29 @@
   .noscroll {
     display: block;
     overflow: hidden;
+  }
+
+  .add_sklad_adaptive {
+    display: block;
+  }
+
+  .block_three_column {
+    margin-top: 0;
+    padding-right: 0;
+  }
+
+  .label_in_three_column,
+  .label_in_three_column:last-child {
+    width: 100%;
+    padding: 10px 0;
+  }
+
+  .tlabel_adaptive {
+    top: 24px !important;
+  }
+
+  .block_nopadding {
+    padding-right: 0 !important;
   }
 }
 
