--- a/scss/style.scss
+++ b/scss/style.scss
@@ -72,6 +72,11 @@ input[type="text"] {
   overflow: hidden;
 }
 
+.block_three_column {
+  margin-top: 25px;
+  padding-right: 5%;
+}
+
 .fullwidth  {
   width: 100%;
   float: left;
@@ -168,6 +173,7 @@ input[type="text"] {
   }
 
   &_top {
+    position: relative;
     width: 100%;
     padding: 24px;
     box-sizing: border-box;
@@ -890,7 +896,7 @@ table.bordered tr td {
 
 .custom-radio {
   position: absolute;
-  z-index: -1;
+  z-index: 4;
   opacity: 0;
 }
 
