--- a/css/320.css
+++ b/css/320.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 320px) and (max-width: 800px) {
   .modal_sklad {
-    display: block;
+    display: none;
     width: 100%;
     left: 0;
     top: 56px;
@@ -517,12 +517,13 @@
     display: block;
   }
 
-  .modal_view {
+  .modal_view,
+.modal_partner {
     position: fixed;
     width: 100%;
     padding: 20px;
     font-family: FuturaPT-Book;
-    bottom: 0;
+    top: 54px;
     left: 0;
   }
 
@@ -576,7 +577,7 @@
 .line_param_cart .r_p_cart {
     position: absolute;
     bottom: 15px;
-    left: 45px;
+    left: 30px;
     right: 0;
     top: auto;
   }
