--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,6 +36,16 @@ h1 {
   font-family: FuturaPT-Demi;
 }
 
+h2 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 32px;
+  color: #383A41;
+  margin-bottom: 24px;
+  font-family: FuturaPT-Book;
+}
+
 h3 {
   font-family: FuturaPT-Book;
   font-style: normal;
@@ -701,6 +711,12 @@ input[type="text"] {
   table {
     width: 100%;
     border: 1px solid #BABABA;
+
+    .table_returns {
+      th {
+        padding-bottom: 25px;
+      }
+    }
   }
 
   table tr {
@@ -969,7 +985,7 @@ table.bordered tr td {
 
 .tlabel{
   position: absolute;
-  top: 36px;
+  top: 18px;
   /* left: 37px; */
   transition: .15s ease-in-out;
   color: #a0a0a6;
@@ -1277,7 +1293,7 @@ table.bordered tr td {
   }
 
   label {
-    top: 10px;
+    top: -5px;
     font-family: FuturaPT-Book;
     font-style: normal;
     font-weight: normal;
