--- a/css/320.css
+++ b/css/320.css
@@ -6,6 +6,10 @@
     top: 56px;
   }
 
+  .button_adaptive {
+    width: auto;
+  }
+
   .acc_nav {
     left: 10px;
   }
@@ -347,7 +351,7 @@
 
   .modal_calend_left {
     float: left;
-    margin-right: 0;
+    margin-right: 10px;
     margin-bottom: 10px;
   }
 
@@ -527,7 +531,8 @@
     left: 0;
   }
 
-  .modal_line_catalog {
+  .modal_line_catalog,
+.modal_line_nakl {
     top: 20px;
   }
 
