--- a/scss/style.scss
+++ b/scss/style.scss
@@ -707,6 +707,7 @@ input[type="text"] {
 .middle_part {
   width: 100%;
   float: left;
+  overflow-x: scroll;
 
   table {
     width: 100%;
@@ -715,6 +716,7 @@ input[type="text"] {
     .table_returns {
       th {
         padding-bottom: 25px;
+        padding-right: 100px;
       }
     }
   }
