--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ input[type=text] {
   padding: 0;
   box-sizing: border-box;
   z-index: 15;
+  overflow-y: auto;
 }
 .left_menu:hover {
   width: 280px;
