--- a/scss/style.scss
+++ b/scss/style.scss
@@ -563,6 +563,7 @@ input[type="text"] {
     padding-bottom: 25px;
 
     a.footer_line_link {
+      font-family: FuturaPT-Demi;
       font-style: normal;
       font-weight: 500;
       font-size: 16px;
@@ -1215,6 +1216,7 @@ table.bordered tr td {
 //Кнопки
 
 .brd_green {
+  font-family: FuturaPT-Demi;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
