--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,7 +20,6 @@
 //Основные стили
 
 body {
-  font-family: 'FTN45', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -1604,6 +1603,38 @@ table.bordered tr td {
 .c_p_cart {
   display: inline-block;
   width: 44%;
+}
+
+.l_p_cart .cart_title {
+  font-family: FuturaPT-Demi;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  color: #383A41;
+}
+
+.c_p_cart {
+  span, .input_edit {
+    font-family: FuturaPT-Book;
+  }
+
+  span {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 12px;
+    color: #9A9A9A;
+  }
+
+  .input_edit,
+  span.cart_text {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: #383A41;
+  }
 }
 
 .r_p_cart {
