--- a/css/style.css
+++ b/css/style.css
@@ -709,9 +709,62 @@ input[type=text] {
   color: #FFFFFF;
 }
 
+.middle_part_tooltip {
+  overflow: inherit;
+}
+
 table.bordered tr th,
 table.bordered tr td {
   border-right: 1px solid #BABABA;
+}
+
+.tooltip_block td {
+  position: relative;
+  cursor: pointer;
+}
+.tooltip_block:hover {
+  background-color: #CEEBEA;
+}
+.tooltip_block:hover .tooltip_block_hover {
+  display: block;
+}
+
+.tooltip_block_hover {
+  display: none;
+  position: absolute;
+  width: 280px;
+  bottom: 53px;
+  background: #FFFFFF;
+  box-shadow: 0 4px 12px rgba(56, 58, 65, 0.24);
+  padding: 20px;
+  z-index: 1;
+  transform: translate(100%);
+}
+.tooltip_block_hover_title {
+  font-family: FuturaPT-Demi;
+}
+.tooltip_block_hover_link {
+  display: block;
+  text-decoration: underline;
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 16px;
+  color: #32AAA7;
+  font-family: FuturaPT-Book;
+}
+.tooltip_block_hover_close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.tooltip_block .triangle:after {
+  content: "";
+  position: absolute;
+  left: 45%;
+  bottom: -20px;
+  border: 10px solid transparent;
+  border-top: 10px solid #FFFFFF;
 }
 
 .tbody td {
@@ -1209,10 +1262,9 @@ table.bordered tr td {
   display: none;
   position: fixed;
   width: 93%;
-  height: 100%;
   background: #fff;
   left: 100px;
-  top: 20px;
+  bottom: 20%;
   padding: 40px;
   box-sizing: border-box;
   box-shadow: 0 4px 12px 2px rgba(0, 0, 0, 0.24);
@@ -1230,6 +1282,12 @@ table.bordered tr td {
   background: url(../images/array_down.png) no-repeat center;
   right: -5px;
   top: 16px;
+}
+
+.modal_partner,
+.modal_sklad {
+  height: 100%;
+  top: 20px;
 }
 
 .select_one {
