--- a/scss/320.scss
+++ b/scss/320.scss
@@ -307,7 +307,10 @@
     float: left;
     width: 100%;
     overflow: scroll;
+  }
 
+  .middle_part_tooltip {
+    overflow: scroll;
   }
 
   .component_head_sort label {
