--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1040,7 +1040,8 @@ table.bordered tr td {
     bottom: 35px;
   }
 
-  .array_down {
+  .array_down,
+  .tinput_menu_array_down{
     display: block;
     position: absolute;
     width: 24px;
@@ -1049,6 +1050,10 @@ table.bordered tr td {
     right: 0;
     bottom: 35px;
     background: url(../images/array_down.png) no-repeat center;
+  }
+
+  .tinput_menu_array_down {
+    transform: rotate(180deg);
   }
 }
 
@@ -1807,22 +1812,39 @@ table.bordered tr td {
   margin-top: 15px;
 }
 
-//Скролл
+.sklad_menu {
+  display: none;
+  position: absolute;
+  width: 100%;
+  list-style: none;
+  padding: 6px 0;
+  box-sizing: border-box;
+  border: 1px solid #e4e7ed;
+  border-radius: 4px;
+  background-color: #fff;
+  box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
+  margin: 5px 0;
+  z-index: 1;
 
-//::-webkit-scrollbar {
-//  width: 1px;
-//  height: 1px;
-//}
-//
-//::-webkit-scrollbar-track {
-//  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-//  opacity: 0.64;
-//  border-radius: 10px;
-//}
-//
-//::-webkit-scrollbar-thumb {
-//  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
-//  background: #383A41;
-//  opacity: 0.64;
-//  border-radius: 10px;
-//}
+  li {
+    font-size: 14px;
+    padding: 0 20px;
+    position: relative;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: #606266;
+    height: 34px;
+    line-height: 34px;
+    box-sizing: border-box;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #f5f7fa;
+    }
+  }
+}
+
+.tinput_menu_active ~ .sklad_menu {
+  display: block;
+}
